--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine on
+# Disable directory browsing 
+Options -Indexes
 RewriteCond $1 !^(index\.php|assets|images|js|css|uploads|favicon.png)
 RewriteCond %(REQUEST_FILENAME)	!-f
 RewriteCond %(REQUEST_FILENAME)	!-d
